--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -2,6 +2,9 @@ $main-color: red;
 
 * {
     color: $main-color;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
 html {
@@ -13,14 +16,3 @@ body {
     font-size: $m-size;
 }
 
-button {
-    cursor: pointer;
-}
-
-button:disabled {
-    cursor: default;
-}
-
-.is-active {
-    font-weight: bold;
-}
