--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,3 +1,7 @@
 @import './base/settings';
 @import './base/base';
 @import './components/header';
+@import './components/MainPage/mainPage';
+@import './components/MainPage/resultsPanel';
+@import './components/MainPage/searchForm';
+@import './components/MainPage/autosuggest';
