--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -9,7 +9,7 @@ html {
 }
 
 body {
-    font-family: Helvetica, Arial, sans-serif;
+    font-family: Lato, Arial, sans-serif;
     font-size: $m-size;
 }
 
