--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -1,9 +1,14 @@
 // Colors
-
+$light-black: #333333;
+$dark-grey: #484848;
+$mid-grey: #666;
+$light-grey: #c1c1c1;
 
 // Spacing
+$xs-size: 0.6rem;
 $s-size: 1.2rem;
 $m-size: 1.6rem;
+$xm-size: 1.8rem;
 $l-size: 3.2rem;
 $xl-size: 4.8rem;
-$desktop-breakpoint: 45rem;
+$desktop-breakpoint: 650px;
