Improve autosuggest logic for inputs on search panel

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -5,3 +5,4 @@
 @import './components/MainPage/resultsPanel';
 @import './components/MainPage/searchForm';
 @import './components/MainPage/autosuggest';
+@import './components/MainPage/inputDate';
