Add error tooltip to search form

--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -3,6 +3,7 @@ $light-black: #333333;
 $dark-grey: #484848;
 $mid-grey: #666;
 $light-grey: #c1c1c1;
+$red-error: #ef5d5d;
 
 // Spacing
 $xs-size: 0.6rem;
