--- a/src/styles/components/MainPage/_inputDate.scss
+++ b/src/styles/components/MainPage/_inputDate.scss
@@ -1,3 +1,17 @@
+.SingleDatePickerInput {
+    background-color: transparent;
+}
+
+.SingleDatePickerInput__withBorder {
+    border: none;
+}
+
+.DateInput {
+
+}
+
 .DateInput_input {
-    
+    color: #666;
+    font-size: $xm-size;
+    padding: 11px 11px 9px 0;
 }
