Add parameters panel arrows styling and animations

--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -4,6 +4,7 @@ $dark-grey: #484848;
 $mid-grey: #666;
 $light-grey: #c1c1c1;
 $red-error: #ef5d5d;
+$submit-btn: #00d775;
 
 // Spacing
 $xs-size: 0.6rem;
