--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -7,3 +7,4 @@
 @import './components/MainPage/autosuggest';
 @import './components/MainPage/singleDatePicker';
 @import './components/MainPage/inputWithErrorTooltip';
+@import './components/MainPage/parametersPanel';
