--- a/src/styles/components/MainPage/_singleDatePicker.scss
+++ b/src/styles/components/MainPage/_singleDatePicker.scss
@@ -1,30 +1,76 @@
-/*
-.SingleDatePickerInput {
-    background-color: transparent;
+.SingleDatePicker {
+  width: 100%;
 }
-
-.SingleDatePickerInput__withBorder {
-    border: none;
-}
-
 
 .DateInput_input {
-    color: #666;
-    font-size: $xm-size;
-    padding: 11px 11px 9px 0;
+  color: $mid-grey;
+  font-size: $xm-size;
+  font-weight: 400;
+  padding: 0;
+  border: none;
 }
 
 .DateInput_input__focused {
-    border-bottom: 2px solid transparent;
+  border: none;
 }
 
 .SingleDatePicker_picker {
-    top: 145% !important;
-    left: -60% !important;
+  /* For big devices */
+  @media (min-width: 416px) {
+    /* autoinput height ($xl-size) - padding-top ($s-size) */
+    top: calc(#{$xl-size} - #{$s-size}) !important;
+    /* move to the left (minus): autoinput padding-left ($m-size) + label min-width ($xl-size) + label margin-right ($s-size) + 1 border */
+    left: calc(-#{$m-size} - #{$xl-size} - #{$s-size} - 0.1rem) !important;
+    /* 100% of input width + padding-left ($m-size) + label min-width ($xl-size) + label margin-right ($s-size) + autoinput padding-right ($m-size) + 2 borders */
+    width: calc(100% + #{$m-size} + #{$xl-size} + #{$s-size} + #{$m-size} + 0.2rem);
+
+    box-shadow: 0 $m-size $l-size -$s-size rgba(26, 26, 26, 0.3);
+    padding: 24px;
+  }
+
+  border: 0.1rem solid $light-grey;
+  border-radius: $xs-size;
+  overflow: hidden;
+  display: flex;
+  justify-content: center;
 }
 
 .DayPicker {
-    max-width: 275px;
-    width: 100% !important;
+  @media (max-width: 415px) {
+    padding: 12px 0;
+  }
+}
+
+.DayPicker__withBorder {
+  box-shadow: none;
+  border-radius: none;
+}
+
+.CalendarMonth_caption {
+  color: $light-black;
+  font-size: $xm-size;
+}
+
+/*
+.CalendarDay {
+  border: 1px solid transparent;
+}
+
+.CalendarDay__default:hover {
+  background-color: red;
+  border: none;
+  border-radius: 50%;
+
 }
 */
+
+.Calendar__info--bottom {
+  position: relative;
+  left: 25%;
+  @media (max-width: 415px) {
+    left: 22%;
+  }
+  padding: $s-size;
+  font-size: $m-size;
+  color: $light-black;
+}
