--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -8,3 +8,5 @@
 @import './components/MainPage/singleDatePicker';
 @import './components/MainPage/inputWithErrorTooltip';
 @import './components/MainPage/parametersPanel';
+@import './components/MainPage/parameter';
+@import './components/MainPage/slider';
