Search Form styling

--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -5,6 +5,8 @@ $mid-grey: #666;
 $light-grey: #c1c1c1;
 $red-error: #ef5d5d;
 $submit-btn: #00d775;
+$option-choose: #00a699; /* 37adbf */
+$disabled: rgb(235, 235, 228);
 
 // Spacing
 $xs-size: 0.6rem;
