--- a/src/styles/components/MainPage/_parametersPanel.scss
+++ b/src/styles/components/MainPage/_parametersPanel.scss
@@ -1,7 +1,7 @@
 .parameters-panel__container {
-  border: 0.1rem solid $light-grey; 
+  border: 0.1rem solid $light-grey;
   border-radius: $xs-size;
-  margin-top: $m-size;
+  margin: $s-size 0;
 }
 
 .parameters-panel__container--error {
@@ -12,6 +12,8 @@
   max-height: 0px;
   transition: 0.5s ease-in-out;
   overflow: hidden;
+  display: flex;
+  flex-direction: column;
 }
 
 .parameters-panel__parameters--open {
@@ -19,7 +21,6 @@
 }
 
 .parameters-panel__open-close-btn {
-/*  border: 1px solid red; */
   text-align: center;
   height: 100%;
   min-height: 6.8rem;
@@ -28,7 +29,7 @@
 }
 
 .parameters-panel__open-close-btn--open {
-/*  min-height: 4rem;
+  /*  min-height: 4rem;
   padding-top: 0; */
 }
 
@@ -82,7 +83,7 @@
 .parameters-panel__arrow--first-init {
   animation-name: arrowDown;
   animation-duration: 3s;
-  animation-delay: .2s;
+  animation-delay: 0.2s;
   animation-iteration-count: infinite;
   animation-timing-function: linear;
 }
@@ -139,5 +140,20 @@
   }
   100% {
     transform: rotate(0deg);
+  }
+}
+
+@media (min-width: $desktop-breakpoint) {
+  .parameters-panel__parameters {
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
+
+  .parameter-container {
+    width: 50%;
+  }
+
+  .parameter-container:nth-of-type(even) {
+    border-left: .1rem solid $light-grey;
   }
 }
