--- a/src/styles/components/MainPage/_searchForm.scss
+++ b/src/styles/components/MainPage/_searchForm.scss
@@ -15,7 +15,7 @@
 }
 
 .search-form__submit-btn-container {
-  width: 100%;
+  flex: 1;
 }
 
 .search-form__submit-btn {
@@ -27,13 +27,37 @@
   font-size: $xm-size;
   font-weight: 700;
   text-transform: uppercase;
-  margin-top: $m-size;
+  margin-top: $s-size;
   height: $xl-size;
   width: 100%;
   cursor: pointer;
-  transition: all .3s;
+  transition: all 0.3s;
 }
 
 .search-form__submit-btn:hover {
   background: darken($submit-btn, 5%);
+}
+
+@media (min-width: $desktop-breakpoint) {
+  .search-form {
+    border: 0.1rem solid $light-grey;
+    border-radius: $xs-size;
+    background-color: white;
+    position: absolute;
+    top: 25%;
+    left: 10%;
+  }
+
+  .search-form__form {
+    max-width: 60rem;
+  }
+
+  .search-form__autoinput-group {
+    flex-direction: row;
+    margin-left: -$s-size;
+  }
+
+  .search-form__submit-btn-container {
+    margin-left: $s-size;
+  }
 }
