--- a/src/styles/components/MainPage/_singleDatePicker.scss
+++ b/src/styles/components/MainPage/_singleDatePicker.scss
@@ -25,7 +25,7 @@
     width: calc(100% + #{$m-size} + #{$xl-size} + #{$s-size} + #{$m-size} + 0.2rem);
 
     box-shadow: 0 $m-size $l-size -$s-size rgba(26, 26, 26, 0.3);
-    padding: 24px;
+  /*  padding-bottom: $s-size; */
   }
 
   border: 0.1rem solid $light-grey;
@@ -33,12 +33,6 @@
   overflow: hidden;
   display: flex;
   justify-content: center;
-}
-
-.DayPicker {
-  @media (max-width: 415px) {
-    padding: 12px 0;
-  }
 }
 
 .DayPicker__withBorder {
@@ -66,11 +60,11 @@
 
 .Calendar__info--bottom {
   position: relative;
-  left: 25%;
+  left: 24%;
   @media (max-width: 415px) {
-    left: 22%;
+    left: 26%;
   }
-  padding: $s-size;
+  top: -$s-size;
   font-size: $m-size;
   color: $light-black;
 }
