--- a/src/styles/components/MainPage/_slider.scss
+++ b/src/styles/components/MainPage/_slider.scss
@@ -22,7 +22,7 @@
   height: $m-size;
   margin: -0.7rem 0 0;
   border-radius: 50%;
-  background: #37adbf;
+  background: $option-choose;
   cursor: pointer;
   border: 0 !important;
 }
@@ -76,7 +76,7 @@
 .slider__label {
   font-size: $s-size;
   font-weight: 500;
-  color: #b2b2b2;
+  color: darken($light-grey, 10%);
   cursor: pointer;
   min-width: 1rem;
   text-align: center;
@@ -90,12 +90,12 @@
   margin: 0 auto;
   width: 0.8rem;
   height: 0.8rem;
-  background: #b2b2b2;
+  background: darken($light-grey, 10%);
   border-radius: 50%;
 }
 
 .slider__label--selected {
-  color: #37adbf;
+  color: $option-choose;
   font-size: $m-size;
   transition: .2s ease-in-out;
   margin-top: 0;
@@ -110,7 +110,7 @@
 }
 
 .slider__label--active::before {
-  background: #37adbf;
+  background: $option-choose;
 }
 
 .slider__label--selected.slider__label--active::before {
