--- a/src/styles/components/MainPage/_searchForm.scss
+++ b/src/styles/components/MainPage/_searchForm.scss
@@ -6,7 +6,7 @@
 .search-form__form {
   max-width: 55rem;
   width: 100%;
-  margin: 0 $xm-size;
+  margin: 0 $s-size;
 }
 
 .search-form__autoinput-group {
