--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -10,3 +10,4 @@
 @import './components/MainPage/parametersPanel';
 @import './components/MainPage/parameter';
 @import './components/MainPage/slider';
+@import './components/MainPage/travel';
