Add banner images

--- a/src/styles/components/MainPage/_mainPage.scss
+++ b/src/styles/components/MainPage/_mainPage.scss
@@ -38,7 +38,7 @@
 @media (min-width: $desktop-breakpoint) {
   .main-header__background {
     height: 100vh;
-    min-height: 600px;
+  //  min-height: 600px;
   }
 
 
