--- a/src/styles/components/MainPage/_slider.scss
+++ b/src/styles/components/MainPage/_slider.scss
@@ -97,7 +97,7 @@
 .slider__label--selected {
   color: $option-choose;
   font-size: $m-size;
-  transition: .2s ease-in-out;
+  transition: .2s;
   margin-top: 0;
 }
 
