--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -11,3 +11,4 @@
 @import './components/MainPage/parameter';
 @import './components/MainPage/slider';
 @import './components/MainPage/travel';
+@import './components/TravelPage/imageSlider';
