--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -11,3 +11,4 @@
 @import './components/MainPage/parameter';
 @import './components/MainPage/travelCard';
 @import './components/TravelPage/imageSlider';
+@import './components//TravelPage/travelPage';
