WeatherCard and tests

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -13,3 +13,4 @@
 @import './components/TravelPage/imageSlider';
 @import './components/TravelPage/travelPage';
 @import './components/TravelPage/parametersList';
+@import './components/TravelPage/weatherCard';
