--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -14,3 +14,4 @@
 @import './components/TravelPage/travelPage';
 @import './components/TravelPage/parametersList';
 @import './components/TravelPage/weatherCard';
+@import './components/TravelPage/banner';
