--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -15,3 +15,4 @@
 @import './components/TravelPage/parametersList';
 @import './components/TravelPage/weatherCard';
 @import './components/TravelPage/banner';
+@import './components/TravelPage/textArea';
