--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -27,7 +27,7 @@
 
 .header__menu-item {
   border-bottom: 0.3rem solid transparent;
-  margin: 0 $m-size;
+  margin: 0 $s-size;
   height: 100%;
 }
 
@@ -47,6 +47,7 @@
 
 .header__title {
   padding-left: $s-size;
+  //font-size: $m-size;
   color: white;
   position: absolute;
   top: 100%;
@@ -56,5 +57,10 @@
   .header__title {
     position: relative;
     color: $dark-grey;
+    font-size: $l-size;
+  }
+
+  .header__menu-item {
+    margin: 0 $m-size;
   }
 }
