--- a/src/styles/components/TravelPage/_imageSlider.scss
+++ b/src/styles/components/TravelPage/_imageSlider.scss
@@ -69,7 +69,7 @@
   width: $m-size;
   margin: 0 0.4rem;
   background-color: rgba(0, 0, 0, 0);
-  border: 0.1rem solid #fff;
+  border: 0.2rem solid white;
   border-radius: 16px;
   display: inline-block;
   transition: background-color 0.6s ease;
@@ -90,5 +90,30 @@
   
   .image-slider__dots-container {
     top: 42vh;
+  }
+}
+
+@media (max-width: $desktop-breakpoint) {
+  .image-slider__current-slide::before {
+    content: "";
+    display: block;
+    position: absolute;
+    bottom: 0;
+    height: 28%;
+    width: 100%;
+    background-color: black;
+    opacity: 0.5;
+  }
+
+  .image-slider__dots-container {
+    top: 31vh;
+  }
+
+  .image-slider__dot {
+    border: 0.2rem solid $dark-grey;
+  }
+
+  .image-slider__dot--active {
+    background-color: $dark-grey;
   }
 }
