--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -46,11 +46,10 @@
 }
 
 .header__title {
-  padding-left: $s-size;
-  //font-size: $m-size;
+  font-size: 3vh;
   color: white;
   position: absolute;
-  top: 100%;
+  top: calc(100% + 22vh);
 }
 
 @media (min-width: $desktop-breakpoint) {
@@ -58,9 +57,17 @@
     position: relative;
     color: $dark-grey;
     font-size: $l-size;
+    top: 0;
   }
 
   .header__menu-item {
     margin: 0 $m-size;
+  }
+}
+
+@media (max-width: $desktop-breakpoint) {
+  .header__title {
+    left: 50%;
+    transform: translate(-50%, 0);
   }
 }
