--- a/src/styles/components/TravelPage/_imageSlider.scss
+++ b/src/styles/components/TravelPage/_imageSlider.scss
@@ -99,7 +99,7 @@
     display: block;
     position: absolute;
     bottom: 0;
-    height: 28%;
+    height: 6vh;
     width: 100%;
     background-color: black;
     opacity: 0.5;
