--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -46,7 +46,7 @@
 }
 
 .header__title {
-  font-size: 3vh;
+  font-size: 4vh;
   color: white;
   position: absolute;
   top: calc(100% + 22vh);
@@ -67,6 +67,8 @@
 
 @media (max-width: $desktop-breakpoint) {
   .header__title {
+    width: 100%;
+    text-align: center;
     left: 50%;
     transform: translate(-50%, 0);
   }
