--- a/src/styles/components/TravelPage/_parametersList.scss
+++ b/src/styles/components/TravelPage/_parametersList.scss
@@ -1,6 +1,6 @@
 .parameters-list__container {
-  border: 0.1rem solid $light-grey;
-  border-radius: $xs-size;
+  //border: 0.1rem solid $light-grey;
+  //border-radius: $xs-size;
   max-width: 80rem;
   width: 100%;
   padding-bottom: $s-size;
