--- a/src/styles/components/TravelPage/_travelPage.scss
+++ b/src/styles/components/TravelPage/_travelPage.scss
@@ -3,3 +3,11 @@
     flex-direction: column;
     align-items: center;
 }
+
+.travel__divider {
+    border-top: 0.1rem solid lighten($light-grey, 15%);
+    width: 100%;
+    max-width: $content-width;
+    margin-top: $l-size;
+    margin-bottom: $l-size;
+}
