--- a/src/styles/components/MainPage/_singleDatePicker.scss
+++ b/src/styles/components/MainPage/_singleDatePicker.scss
@@ -28,8 +28,8 @@
   /*  padding-bottom: $s-size; */
   }
 
-  border: 0.1rem solid $light-grey;
-  border-radius: $xs-size;
+  //border: 0.1rem solid $light-grey;
+  //border-radius: $xs-size;
   overflow: hidden;
   display: flex;
   justify-content: center;
