--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -17,3 +17,4 @@
 @import './components/TravelPage/weatherCard';
 @import './components/TravelPage/banner';
 @import './components/TravelPage/textArea';
+@import './components/Header/userMenu';
