--- a/src/styles/components/Header/_header.scss
+++ b/src/styles/components/Header/_header.scss
@@ -107,7 +107,7 @@
   .header__title {
     position: relative;
     color: $dark-grey;
-    font-size: $l-size;
+    font-size: 2.9rem;
     top: 0;
   }
   
