--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -18,3 +18,6 @@
 @import './components/TravelPage/banner';
 @import './components/TravelPage/textArea';
 @import './components/Header/userMenu';
+@import './components/NotificationsPage/notificationPage';
+@import './components/NotificationsPage/notificationList';
+@import './components/NotificationsPage/notificationItem';
