--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -21,3 +21,4 @@
 @import './components/NotificationsPage/notificationPage';
 @import './components/NotificationsPage/notificationList';
 @import './components/NotificationsPage/notificationItem';
+@import './components/NotificationsPage/addNotification';
