--- a/src/styles/components/NotificationsPage/_notificationItem.scss
+++ b/src/styles/components/NotificationsPage/_notificationItem.scss
@@ -1,16 +1,28 @@
 .notification-item__container {
-    position: relative;
-    display: flex;
-    justify-content: space-between;
     border: .1rem solid $light-grey;
     border-top: none;
     padding: $s-size $s-size $s-size 0;
     color: $light-black;
 }
 
-.notification-item {
+.notification-item__first-row {
+    position: relative;
+    display: flex;
+    justify-content: space-between;
+}
+
+.notification-item__second-row {
+    display: none;
+}
+
+.notification-item, .notification-item--desktop {
     flex: 1;
     text-align: center;
+}
+
+.notification-item--mobile {
+    margin-left: $l-size;
+
 }
 
 .notification-item__delete-button {
@@ -31,4 +43,41 @@
     position: absolute;
     right: 0;
     margin-right: $s-size;
+}
+
+@media (max-width: $desktop-breakpoint) {
+
+    .notification-item__container {
+        font-size: $s-size;
+        padding: $xs-size 0;
+        color: black;
+    }
+
+    .notification-item__first-row {
+        font-size: 1.4rem;
+        padding-right: 2.2rem;
+    }
+
+    .notification-item__second-row {
+        color: $mid-grey;
+        display: flex;
+        justify-content: flex-start;
+        padding-top: $xs-size;
+        padding-left: $l-size;
+        //padding: 0.3rem 0 0 12vw;
+    }
+
+    .notification-item--desktop {
+        display: none;
+    }
+
+    .notification-item__delete-button {
+        top: 40%;
+        //margin-right: $xs-size;
+    }
+
+    .notification-item__delete-spinner {
+        top: 50%;
+        //margin-right: $xs-size;
+    }
 }
