--- a/src/styles/components/NotificationsPage/_notificationPage.scss
+++ b/src/styles/components/NotificationsPage/_notificationPage.scss
@@ -13,3 +13,9 @@
   top: 50%;
   transform: translate(-50%, -50%);
 }
+
+@media (max-width: $desktop-breakpoint) { 
+  .notifications__background-container {
+    height: 22vh;
+  }
+}
