--- a/src/styles/components/Header/_userMenu.scss
+++ b/src/styles/components/Header/_userMenu.scss
@@ -73,10 +73,11 @@
   padding: $xs-size;
   display: block;
   cursor: pointer;
+  font-weight: normal;
 }
 
 .user-menu__link:hover {
-  color: #a11122;
+  color: $option-choose-menu;
   text-decoration: underline;
 }
 
