--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -22,3 +22,4 @@
 @import './components/NotificationsPage/notificationList';
 @import './components/NotificationsPage/notificationItem';
 @import './components/NotificationsPage/addNotification';
+@import './components/MainPage/bestDeals';
