--- a/src/styles/components/MainPage/_mainPage.scss
+++ b/src/styles/components/MainPage/_mainPage.scss
@@ -36,10 +36,7 @@
 }
 
 @media (min-width: $desktop-breakpoint) {
-  .main-header__background {
+  .main-header {
     height: 100vh;
-  //  min-height: 600px;
   }
-
-
 }
