--- a/src/styles/components/MainPage/_resultsPanel.scss
+++ b/src/styles/components/MainPage/_resultsPanel.scss
@@ -3,7 +3,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 0 $s-size;
+  padding: $s-size;
 }
 
 .results__filter {
@@ -56,9 +56,12 @@
   font-weight: bold;
 }
 
-@media (min-width: $desktop-breakpoint) {
+@media (max-width: $desktop-breakpoint) {
   .results__list {
-    position: absolute;
-    top: 101vh;
+    padding-top: 0;
+  }
+
+  .results__filter-arrow {
+    font-size: $m-size;
   }
 }
