--- a/src/styles/components/NotificationsPage/_notificationItem.scss
+++ b/src/styles/components/NotificationsPage/_notificationItem.scss
@@ -1,8 +1,12 @@
 .notification-item__container {
     border: .1rem solid $light-grey;
-    border-top: none;
+    border-top: .1rem solid transparent;
     padding: $s-size $s-size $s-size 0;
     color: $light-black;
+}
+
+.notification-item__container--highlight-red {
+    border: .1rem solid $red-error;
 }
 
 .notification-item__first-row {
